tests/paczka1/fuzzy1/63602224.err
Error in line 1: Nd9NOLwKQs¡S279¡62,3
Error in line 7: 1uK6Z S279 62,2
Error in line 18: bFTHkRQ S279 66,3
Error in line 31: A659 S647 13,4
